# ensemblify

./: .gitignore  .readthedocs.yaml  BME_callstack.py  BME_tools_callstack.py  README.md  environment.yml  environment_LINUX.yml  environment_MACOS.yml  mdreader_callstack.py  pyproject.toml  requirements.in  requirements_LINUX.txt
.github/workflows/: publish.yaml
docs/: conf.py  index.rst  requirements.in  requirements.txt
docs/assets/: parameters_form.html  parameters_template.yaml
docs/source/: README.rst  acknowledgements.md  acknowledgements.rst  authors.md  authors.rst  citation_and_publications.md  citation_and_publications.rst  cli.md  cli_informational.md  cli_workflow.md  conf.py  database.md  documentation.rst  index.rst  installation.md  installation.rst  overview.md  overview.rst  usage.md  usage.rst  usage_analysis.md  usage_clash_checking.md  usage_conversion.md  usage_generation.md  usage_modelling.md  usage_pipeline.md  usage_reweighting.md
docs/source/_static/css/: custom.css
docs/source/autoapi/: index.rst
docs/source/autoapi/ensemblify/: index.rst
examples/: 01_getting_started.ipynb  01_quick_reference_guide.ipynb  02_generation_module.ipynb  03_conversion_module.ipynb  04_analysis_module.ipynb  05_reweighting_module.ipynb  parameters_form.html  parameters_template.yml  quick_reference_guide.ipynb
examples/input_parameters/: generate_Hst5.yaml  parameters_form.html  parameters_template.yml
rstfiles/: database.rst  installation.rst
src/ensemblify/: __init__.py  clash_checking.py  cli.py  config.py  pipeline.py
src/ensemblify/analysis/: __init__.py  colors.py  data.py  figures.py  parula.py  trajectory.py  trajectory_utils.py
src/ensemblify/conversion/: __init__.py  conversion_utils.py  ensemble2trajectory.py  trajectory2saxs.py
src/ensemblify/generation/: __init__.py  ensemble.py
src/ensemblify/generation/ensemble_utils/: __init__.py  functions.py  inputs_processing.py  movers.py  movers_utils.py  pdb_processing.py  processing_inputs.py  processing_outputs.py  samplers.py  sampling.py  (+1 more)
src/ensemblify/modelling/: __init__.py  constraints.py  fusion.py  objects.py
src/ensemblify/reweighting/: __init__.py  data.py  ensemble.py  ensemble_utils.py  figures.py
src/ensemblify/utils/: __init__.py  clash_checking.py  misc.py  pdb_manipulation.py
tests/: test_analysis.py  test_clash_checking.py  test_conversion.py  test_functions.py  test_generation.py  test_reweighting.py
(+31 files in other folders)
